--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 *, *::before, *::after {
     box-sizing: border-box;
-    font-family: Gotham Rounded, sans-serif;
+    font-family:'Franklin Gothic Medium', sans-serif;
     font-weight: normal;
   }
   
@@ -24,11 +24,11 @@
     font-size: 2rem;
     border: 1px solid rgb(0, 0, 0);
     outline: none;
-    background-color: rgb(255, 70, 70);
+    background-color: rgba(255, 53, 53, 0.75);
   }
   
   .calculator-grid > button:hover {
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(252, 185, 62, 0.75);
   }
   
   .span-two {
@@ -37,7 +37,8 @@
   
   .output {
     grid-column: 1 / -1;
-    background-color: rgb(255, 180, 58);
+    background-color: rgba(250, 207, 128, 0.75);
+    ;
     display: flex;
     align-items: flex-end;
     justify-content: space-around;
@@ -47,12 +48,12 @@
     word-break: break-all;
   }
   
-  .output .previous-operand {
-    color: rgba(255, 255, 255, .75);
+  .output .previous-number {
+    color: rgb(0, 0, 0);
     font-size: 1.5rem;
   }
   
-  .output .current-operand {
+  .output .current-number {
     color: rgb(0, 0, 0);
     font-size: 2.5rem;
   }
