--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *, *::before, *::after {
     box-sizing: border-box;
-    font-family:'Franklin Gothic Medium', sans-serif;
+    font-family:'Segoe UI', Tahoma, sans-serif;
     font-weight: normal;
   }
   
@@ -21,7 +21,7 @@
   
   .calculator-grid > button {
     cursor: pointer;
-    font-size: 2rem;
+    font-size: 3rem;
     border: 1px solid rgb(0, 0, 0);
     outline: none;
     background-color: rgba(255, 53, 53, 0.75);
@@ -33,6 +33,10 @@
   
   .span-two {
     grid-column: span 2;
+  }
+
+  .span-three {
+    grid-column: span 3;
   }
   
   .output {
